Сделал удаление вопроса с отображением после перезахода

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="Log_in">Вход для учителя</string>
     <string name="email">Email</string>
     <string name="pass">Пароль</string>
+    <string name="Hint">Нажмиете на кнопку с правилным вариантом ответа</string>
 </resources>
