--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="email">Email</string>
     <string name="pass">Пароль</string>
     <string name="Hint">Нажмиете на кнопку с правилным вариантом ответа</string>
-    <string name="TextInRec">Обнулить вопросы</string>
+    <string name="TextInRec">Задать сдандартные вопросы</string>
 </resources>
